--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -12,7 +12,7 @@
 			 	<div class="row mt-5">
 					<div class="card col-md-12">
 					  	<div class="card-body">
-							Este es el inicio
+							@!section('contenido')
 					  	</div>
 					</div>
 			 	</div>
